css/style.css
body {
	background: url('../img/tlpd-bg.png') #121212 0 0 no-repeat;
	background-size: 100%;
	color: #eee;
}

h1,h2,h3,h4,h5,h5 { color: #eee; }

header#header { 
	text-align: center;
	position: fixed;
	top: 0; left: 0;
	height: 300px;
	width: 100%;
}

header#header h1 { 
	font-size: 2.75em;
	text-shadow: 0 2px 5px rgba(0,0,0,0.75);
}

#main {
	background: #222;
	border: 1px solid #333;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.25);
	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.25);
	box-shadow: 0 0 5px rgba(0,0,0,0.25);
}

